Correctif de l'alignement de l'icône Saltcup (qui était trop basse par rapport au texte 'Saltcup')

--- a/css/comic.css
+++ b/css/comic.css
@@ -217,6 +217,9 @@ a.lien-cliquable {
 
 #icone-saltcup {
     transform: rotateX(180deg) rotateY(180deg);
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
 }
 
 /* Spécifique à gabarit.html */
